--- a/index.html
+++ b/index.html
@@ -108,6 +108,172 @@
         </div>
     </section>
 
+    <section class="site-product">
+        <h3 class="product__text">
+            More Products
+        </h3>
+        <ul class="container">
+            <div class="product__child" style="margin-top: 100px;">
+                <div class="product__child-div">
+                    <img src="img/product-img1.png" alt="product-img" class="product__child-img" width="300px"
+                        height="380px">
+                    <h4 class="product__child-text">Red Love Cup</h4>
+                    <div class="product__child-sec">
+                        <P class="product__child-clrt">$25.00</P>
+                        <P class="product__child-p">$ 37.00 USD</P>
+                    </div>
+                </div>
+                <div class="product__child-div">
+                    <img src="img/product-img2.png" alt="product-img" class="product__child-img" width="300px"
+                        height="380px">
+                    <h4 class="product__child-text">Black Tea Cup</h4>
+                    <div class="product__child-sec">
+                        <P class="product__child-clrt">$15.00</P>
+                        <P class="product__child-p">$ 29.00 USD</P>
+                    </div>
+                </div>
+                <div class="product__child-div">
+                    <img src="img/product-img3.png" alt="product-img" class="product__child-img" width="300px"
+                        height="380px">
+                    <h4 class="product__child-text">B&W Essentials Mug</h4>
+                    <div class="product__child-sec">
+                        <P class="product__child-p">$ 19.00 USD</P>
+                    </div>
+                </div>
+            </div>
+            <div class="product__child" style="margin-top: 50px;">
+                <div class="product__child-div">
+                    <img src="img/product-img4.png" alt="product-img" class="product__child-img" width="300px"
+                        height="380px">
+                    <h4 class="product__child-text">Winter Style Mug</h4>
+                    <div class="product__child-sec">
+                        <P class="product__child-p">$ 25.00 USD</P>
+                    </div>
+                </div>
+                <div class="product__child-div">
+                    <img src="img/product-img5.png" alt="product-img" class="product__child-img" width="300px"
+                        height="380px">
+                    <h4 class="product__child-text">Ceramic Tea</h4>
+                    <div class="product__child-sec">
+                        <P class="product__child-p">$ 4.00 USD</P>
+                    </div>
+                </div>
+                <div class="product__child-div">
+                    <img src="img/product-img6.png" alt="product-img" class="product__child-img" width="300px"
+                        height="380px">
+                    <h4 class="product__child-text">No Handle Bar Cup</h4>
+                    <div class="product__child-sec">
+                        <P class="product__child-p">$ 34.00 USD</P>
+                    </div>
+                </div>
+            </div>
+            <div class="product__child" style="margin-top: 50px;">
+                <div class="product__child-div">
+                    <img src="img/product-img7.png" alt="product-img" class="product__child-img" width="300px"
+                        height="380px">
+                    <h4 class="product__child-text">Winter Style Mug</h4>
+                    <div class="product__child-sec">
+                        <P class="product__child-p">$ 25.00 USD</P>
+                    </div>
+                </div>
+                <div class="product__child-div">
+                    <img src="img/product-img8.png" alt="product-img" class="product__child-img" width="300px"
+                        height="380px">
+                    <h4 class="product__child-text">Ceramic Tea</h4>
+                    <div class="product__child-sec">
+                        <P class="product__child-p">$ 99.00 USD</P>
+                    </div>
+                </div>
+                <div class="product__child-div">
+                    <img src="img/product-img9.png" alt="product-img" class="product__child-img" width="300px"
+                        height="380px">
+                    <h4 class="product__child-text">No Handle Bar Cup</h4>
+                    <div class="product__child-sec">
+                        <P class="product__child-p">$ 29.00 USD</P>
+                    </div>
+                </div>
+            </div>
+        </ul>
+    </section>
+
+    <section class="site-buy">
+        <h3 class="buy__text">Buy 2 mugs and get a coffee magazine free</h3>
+        <ul class="container">
+            <div class="buy__child">
+                <div style="display: flex; gap: 20px;">
+                    <img src="img/buy-img1.png" alt="buy" width="280px" height="280px" class="buy__child-img">
+                    <div style="flex-direction: column;">
+                        <img src="img/buy-img2.png" alt="buy" width="160px" height="130px" class="buy__child-imgl">
+                        <img src="img/buy-img3.png" alt="buy" width="160px" height="130px" class="buy__child-imgl">
+                    </div>
+                </div>
+                <div>
+                    <h4 class="buy__premium-text">Premium Offer</h4>
+                    <h3 class="buy__premium-h3">Get our Coffee Magazine</h3>
+                    <p class="buy__premium-p">The most versatile furniture system ever created. Designed to fit your
+                        life.</p>
+                    <a href="#">
+                        <button class="buy__premium-btn">Start Shopping</button>
+                    </a>
+                </div>
+            </div>
+        </ul>
+    </section>
+
+    <section class="site-hero">
+        <img src="img/hero-img.png" alt="hero-img" class="hero__img" width="100%" height="340px">
+    </section>
+
+    <section class="container site-behind">
+        <img src="img/behid-img.png" alt="behid-img" width="920px" height="720px">
+    </section>
+
+    <section class="site-bag">
+        <ul class="container">
+            <h4 class="bag__ul-h4">Sign up and get free coffee bags</h4>
+            <h3 class="bag__ul-h3">Coffee Updates</h3>
+            <div class="bag__ul-div">
+                <input type="email" placeholder="customer @coffestyle.io" class="bag__ul-input">
+                <button class="bag__ul-btn">subscribe</button>
+            </div>
+        </ul>
+    </section>
+
+    <section class="site-footer">
+        <ul class="container">
+            <div class="footer__child">
+                <div>
+                    <img src="img/coffee-site-logo.svg" alt="logo" class="footer__child-img" width="111px" height="24px">
+                    <p class="footer__child-text">Delivering the best coffee life since 1996.</p>
+                    <p class="footer__child-text">From coffee geeks to the real ones.</p>
+                    <p class="footer__child-p">CoffeeStyle Inc. © 1996</p>
+                </div>
+                <div>
+                    <h4 class="footer__child-h4">Menu</h4>
+                    <p class="footer__child-text">Home</p>
+                    <p class="footer__child-text">Our Products</p>
+                    <p class="footer__child-text">About</p>
+                    <p class="footer__child-text">Contact</p>
+                    <p class="footer__child-text">Styleguide</p>
+                </div>
+                <div>
+                    <h4 class="footer__child-h4">Follow Us</h4>
+                    <p class="footer__child-text">Facebook</p>
+                    <p class="footer__child-text">Instagram</p>
+                    <p class="footer__child-text">Pinterest</p>
+                    <p class="footer__child-text">Twitter</p>
+                    <p class="footer__child-text">Styleguide</p>
+                </div>
+                
+                <div>
+                    <h4 class="footer__child-h4">Contact Us</h4>
+                    <p class="footer__child-text">We’re Always Happy to Help</p>
+                    <p class="footer__child-link">us@coffeestyle.io</p>
+                    <p class="footer__child-p">Powered by Webflow</p>
+                </div>
+            </div>
+        </ul>
+    </section>
 </body>
 
 </html>
